# crafter-rs

./: .gitignore  Cargo.toml  README.md  configurable-crafter-rs.txt
.cargo/: config.toml
configs/: classic.toml  classic_easy.toml  classic_hard.toml  craftax_partial.toml  craftax_partial_easy.toml  craftax_partial_hard.toml
crafter-tui/: Cargo.toml
crafter-tui/src/: app.rs  crafter.rs  lib.rs  renderer.rs
examples/: convert_rgba.rs  render_test.rs  tui_render_test.rs
scripts/: run-tui.sh
src/: achievement.rs  action.rs  config.rs  entity.rs  image_renderer.rs  inventory.rs  lib.rs  material.rs  parity.rs  recording.rs  renderer.rs  rewards.rs  saveload.rs  session.rs  snapshot.rs  world.rs  worldgen.rs
src/craftax/: loot.rs  mobs.rs  mod.rs  worldgen.rs
src_modular/: Cargo.toml
src_modular/modules/parity/: mod.rs  spec.md
src_modular/modules/parity/tests/: modular.rs
src_modular/src/: lib.rs
src_modular/tests/: module_presence.rs  parity.rs
