[package]
name = "crafter-core"
version = "0.1.0"
edition = "2021"
description = "Core game logic for Crafter - a Minecraft-like 2D survival game engine"
license = "MIT"
repository = "https://github.com/JoshuaPurtell/crafter-rs"
authors = ["Josh Purtell <josh@purtell.io>"]
keywords = ["game", "minecraft", "crafter", "survival", "roguelike"]
categories = ["games", "game-engines"]
readme = "README.md"
exclude = ["assets/*.png"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
noise = "0.9"
uuid = { version = "1.0", features = ["v4"] }
image = { version = "0.24", optional = true }

[features]
default = []
png = ["image"]
