[package]
name = "crafter-core"
version = "0.1.0"
edition = "2021"
description = "Core game logic for Crafter - a Minecraft-like 2D survival game engine"
license = "MIT"
repository = "https://github.com/JoshuaPurtell/crafter-rs"
authors = ["Josh Purtell <josh@purtell.io>"]
keywords = ["game", "minecraft", "crafter", "survival", "roguelike"]
categories = ["games", "game-engines"]
readme = "README.md"
include = ["src/**/*", "assets/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
noise = "0.9"
uuid = { version = "1.0", features = ["v4"] }
image = { version = "0.24", optional = true }
toml = "0.8"

[features]
default = []
png = ["image"]

[workspace]
members = ["crafter-tui"]
resolver = "2"

[patch.crates-io]
opentui-sys = { path = "../mission-control/vendor/opentui-sys" }
