[package]
name = "crafter-tui"
version = "0.1.0"
edition = "2021"
description = "OpenTUI-powered interactive Crafter experience"
license = "MIT"
repository = "https://github.com/JoshuaPurtell/crafter-rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
opentui-sys = "0.1.0"
crafter-core = { path = "..", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
